[all] Fix inheritance